[package]
name = "spl-managed-token"
version = "0.1.0"
description = "Safecoin Program Library Token Swap"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_managed_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[dependencies]
safecoin-program = "1.14.12"
shank = "^0.0.5"
safe-token = { version = "3.5.0", features = ["no-entrypoint"] }
safe-associated-token-account = { version = "1.1.1", features = [ "no-entrypoint", ] }
thiserror = "^1.0.24"
borsh = "0.9.3"

[dev-dependencies]
safecoin-program-test = "1.14.12"
safecoin-sdk = "1.14.12"
tokio = { version = "1.8.4", features = ["full"] }
anyhow = "1.0.52"
