[package]
name = "spl-managed-token"
version = "0.1.0"
description = "Safecoin Program Library Token Swap"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_managed_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[dependencies]
safecoin-program = {path = "../../../Safecoin/sdk/program", version = "1.14.17"}
shank = "^0.0.5"
safe-token = { version = "3.5.0", path = "../../token/program", features = ["no-entrypoint"] }
safe-associated-token-account = { version = "1.1.2", path="../../associated-token-account/program", features = [ "no-entrypoint", ] }
thiserror = "^1.0.24"
borsh = "0.9.3"

[dev-dependencies]
safecoin-program-test = {path = "../../../Safecoin/program-test", version = "1.14.17"}
safecoin-sdk = {path = "../../../Safecoin/sdk", version = "1.14.17"}
tokio = { version = "1.8.4", features = ["full"] }
anyhow = "1.0.52"
