[package]
name = "safe-memo"
version = "3.0.7"
description = "Safecoin Program Library Memo"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
safecoin-program = {path = "../../../Safecoin/sdk/program", version = "1.13.3"}

[dev-dependencies]
safecoin-program-test = {path = "../../../Safecoin/program-test", version = "1.13.3"}
safecoin-sdk = {path = "../../../Safecoin/sdk", version = "1.13.3"}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
