[package]
name = "safe-memo"
version = "3.0.1"
description = "Safecoin Program Library Memo"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
safecoin-program = "1.14.12"

[dev-dependencies]
safecoin-program-test = "1.14.12"
safecoin-sdk = "1.14.12"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
