[package]
name = "spl-name-service"
description = "Safecoin Program Library Name Service"
version = "0.2.0"
repository = "https://github.com/fair-exchange/safecoin-program-library"
authors = [
  "lcchy <lucas@bonfida.com>",
  "Safecoin Labs Maintainers <maintainers@solanalabs.com>"
]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
safecoin-program = {path = "../../../Safecoin/sdk/program", version = "1.14.17"}
num-traits = "0.2"
borsh = "0.9.1"
num-derive = "0.3.3"
thiserror = "1.0.29"

[dev-dependencies]
safecoin-program-test = {path = "../../../Safecoin/program-test", version = "1.14.17"}
safecoin-sdk = {path = "../../../Safecoin/sdk", version = "1.14.17"}

[lib]
crate-type = ["cdylib", "lib"]
