[package]
name = "spl-record"
version = "0.1.0"
description = "Safecoin Program Library Record Program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.0"
num-derive = "0.3"
num-traits = "0.2"
safecoin-program = {path = "../../../Safecoin/sdk/program", version = "1.9.29"}
thiserror = "1.0"

[dev-dependencies]
safecoin-program-test = {path = "../../../Safecoin/program-test", version = "1.9.29"}
safecoin-sdk = {path = "../../../Safecoin/sdk", version = "1.9.29"}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
