[package]
name = "spl-shared-memory"
version = "2.0.6"
description = "Safecoin Program Library Shared-memory"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
test-sbf = []

[dependencies]
arrayref = "0.3.6"
safecoin-program = {path = "../../../Safecoin/sdk/program", version = "=1.14.3"}

[dev-dependencies]
safecoin-program-test = {path = "../../../Safecoin/program-test", version = "=1.14.3"}
safecoin-sdk = {path = "../../../Safecoin/sdk", version = "=1.14.3"}

[lib]
crate-type = ["cdylib", "lib"]
