[package]
name = "spl-shared-memory"
version = "2.0.6"
description = "Safecoin Program Library Shared-memory"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
arrayref = "0.3.6"
safecoin-program = "=1.14.12"

[dev-dependencies]
safecoin-program-test = "=1.14.12"
safecoin-sdk = "=1.14.12"

[lib]
crate-type = ["cdylib", "lib"]
