[package]
name = "spl-shared-memory"
version = "2.0.6"
description = "Safecoin Program Library Shared-memory"
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
arrayref = "0.3.6"
safecoin-program = {path = "../../../Safecoin/sdk/program", version = "=1.14.17"}

[dev-dependencies]
safecoin-program-test = {path = "../../../Safecoin/program-test", version = "=1.14.17"}
safecoin-sdk = {path = "../../../Safecoin/sdk", version = "=1.14.17"}

[lib]
crate-type = ["cdylib", "lib"]
