[package]
authors = ["Safecoin Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL-Stake-Pool Command-line Utility"
edition = "2021"
homepage = "https://spl.solana.com/stake-pool"
license = "Apache-2.0"
name = "spl-stake-pool-cli"
repository = "https://github.com/fair-exchange/safecoin-program-library"
version = "0.7.0"

[dependencies]
borsh = "0.9"
clap = "2.33.3"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
safecoin-account-decoder = "=1.14.12"
safecoin-clap-utils = "=1.14.12"
safecoin-cli-config = "=1.14.12"
safecoin-cli-output = "=1.14.12"
safecoin-client = "=1.14.12"
safecoin-logger = "=1.14.12"
safecoin-program = "=1.14.12"
safecoin-remote-wallet = "=1.14.12"
safecoin-sdk = "=1.14.12"
safe-associated-token-account = { version = "=1.1.2", path="../../associated-token-account/program", features = [ "no-entrypoint" ] }
spl-stake-pool = { version = "=0.7.0", path="../program", features = [ "no-entrypoint" ] }
safe-token = { version = "=3.5.0", path="../../token/program", features = [ "no-entrypoint" ]  }
bs58 = "0.4.0"
bincode = "1.3.1"

[[bin]]
name = "spl-stake-pool"
path = "src/main.rs"
