[package]
name = "spl-stake-pool"
version = "0.7.0"
description = "Safecoin Program Library Stake Pool"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.6"
borsh = "0.9"
lpl-token-metadata =  { version = "1.3.1", features = [ "no-entrypoint" ] }
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
serde = "1.0.130"
serde_derive = "1.0.103"
safecoin-program = {path = "../../../Safecoin/sdk/program", version = "1.13.3"}
spl-math = { version = "0.1", path = "../../libraries/math", features = [ "no-entrypoint" ] }
safe-token = { version = "3.5", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
bincode = "1.3.1"

[dev-dependencies]
proptest = "1.0"
safecoin-program-test = {path = "../../../Safecoin/program-test", version = "1.13.3"}
safecoin-sdk = {path = "../../../Safecoin/sdk", version = "1.13.3"}
safecoin-vote-program = {path = "../../../Safecoin/programs/vote", version = "1.13.3"}

[lib]
crate-type = ["cdylib", "lib"]
